[gd_scene load_steps=2 format=2]

[ext_resource path="res://dialogue/DialogueGraphCreator.gd" type="Script" id=1]

[node name="DialogueGraphCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 20.0

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 20.0
text = "Add Node"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="connection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
